# quantem.widget

./: .gitignore  CLAUDE.md  NOTICE  README.md  dev.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: smoke-loaders.yml  test-matrix.yml
docs/: changelog.md  conf.py  index.md  math.md  optimization.md
docs/api/: align2d_bulk.rst  index.md  io.rst  show2d.rst  show3d.rst
docs/dev/: getting-started.md  gpu-optimization.md  index.md  reference.md  testing.md
docs/examples/: index.md
docs/widgets/: align2d.rst  align2d_bulk.rst  bin.rst  edit2d.rst  gallery.rst  index.rst  mark2d.rst  show1d.rst  show2d.rst  show3d.rst  show3dvolume.rst  show4d.rst  show4dstem.rst  showcomplex.rst
js/: colormaps.ts  stats.ts  theme.ts  webgpu-fft.ts  webgpu-volume.ts
js/align2d/: index.tsx
js/align2d_bulk/: align2d_bulk.css  index.tsx
js/bin2d/: bin2d.css  index.tsx
js/bin4d/: bin4d.css  index.tsx
js/browse/: index.tsx
js/edit2d/: index.tsx
js/live/: index.tsx  live.css
js/mark2d/: index.tsx
js/show2d/: index.tsx
js/show3d/: index.tsx
js/show3dvolume/: index.tsx
js/show4d/: index.tsx
js/show4dstem/: index.tsx
js/show_metric_explorer/: index.tsx  show_metric_explorer.css
js/showcomplex/: index.tsx
js/showdiffraction/: index.tsx  showdiffraction.css
notebooks/align2d/: align2d_mos2_cif.ipynb  align2d_real_data.ipynb
notebooks/align2d_bulk/: align2d_bulk_all_features.ipynb  align2d_bulk_simple.ipynb
notebooks/browse/: browse_all_features.ipynb  browse_simple.ipynb  browse_state.json
notebooks/edit2d/: edit2d_simple.ipynb
notebooks/io/: io_arina.ipynb  io_arina_cuda_gold_fullres.ipynb  io_arina_cuda_korean_bin4.ipynb  io_arina_file.ipynb  io_arina_folder.ipynb  io_file.ipynb  io_folder.ipynb  (+2 more)
scripts/: check_tool_parity.py  generate_catalog.py  gpu_test.py  run_all_notebooks.py  verify_testpypi.sh
tests/: _smoke_all_widgets.ipynb  capture_align2d_bulk.py  capture_live.py  capture_metric_explorer.py  gpu_test.html  test_align2d_bulk.py  test_array_utils.py  test_detector.py  test_e2e_scrub_profile.py  test_e2e_smoke.py  test_e2e_timing_truthful.py  test_export_metadata_contract.py  test_io.py  test_profile.py  test_tool_parity_registry.py  test_widget_bin.py  test_widget_bin2d.py  test_widget_browse.py  test_widget_dataset_integration.py  test_widget_live.py  test_widget_mark2d.py  test_widget_show2d.py  test_widget_show3d.py  test_widget_show3dvolume.py  test_widget_show4d.py  test_widget_show4dstem.py  test_widget_show_metric_explorer.py  test_widget_showcomplex.py  test_widget_showdiffraction.py
(+79 files in other folders)
