[build-system]
requires = ["hatchling", "hatch-jupyter-builder>=0.5.0"]
build-backend = "hatchling.build"

[project]
name = "quantem-widget"
version = "0.0.13"
description = "Interactive custom Python widgets for electron microscopy"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["jupyter", "widget", "anywidget", "electron-microscopy", "4dstem"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Jupyter",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "quantem",
    "anywidget>=0.9.0",
    "numpy>=2.0.0",
    "traitlets>=5.0.0",
    "h5py>=3.0.0",
    "hdf5plugin>=4.0.0",
    "numba>=0.59.0; sys_platform == 'darwin'",
    "pyobjc-framework-Metal>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab", "pytest"]
docs = [
    "sphinx>=7.0",
    "pydata-sphinx-theme>=0.15",
    "numpydoc>=1.7",
    "nbsphinx>=0.9",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.6",
    "sphinx-autobuild>=2024.0",
    "pandoc",
]

[project.scripts]
quantem-show4dstem-export = "quantem.widget.show4dstem_batch:main"

[tool.hatch.version]

[tool.hatch.build]
only-packages = true
artifacts = ["src/quantem/widget/static/*", "src/quantem/widget/tool_parity.json"]

[tool.hatch.build.targets.wheel]
packages = ["src/quantem"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "src/quantem/widget/static/bin.js",
    "src/quantem/widget/static/show1d.js",
    "src/quantem/widget/static/show2d.js",
    "src/quantem/widget/static/show3d.js",
    "src/quantem/widget/static/show3dvolume.js",
    "src/quantem/widget/static/show4d.js",
    "src/quantem/widget/static/show4dstem.js",
    "src/quantem/widget/static/mark2d.js",
    "src/quantem/widget/static/edit2d.js",
    "src/quantem/widget/static/align2d.js",
    "src/quantem/widget/static/align2d_bulk.js",
    "src/quantem/widget/static/showcomplex.js",
]
skip-if-exists = ["src/quantem/widget/static/show2d.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"

[tool.pytest.ini_options]
markers = [
    "quick: fast checks intended for tight edit/verify loops",
    "slow: heavier dataset or integration checks",
]
